--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       property="og:title"
       content="ZarxdOfficial - Creative Developer from indonesia"
     />
-    <meta property="og:url" content="https://sushil-thapa.com.np/" />
+    <meta property="og:url" content="https://portfolio-nizarxds-projects.vercel.app/" />
     <meta
       property="og:description"
       content="Hello, I'm ZarxdOfficial, a creative developer from indonesia. With over 2 years of experience, I specialize in designing and developing dynamic websites with modern technologies like React JS, Next JS, Node JS, Mongo DB, Laravel & Three JS. I also create promotional graphics, games and animations. What sets me apart is my ability to combine technical expertise with a keen eye for design, resulting in projects that are both beautiful and functional."
