--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <ul>
           <li>
             <a
-              href="https://www.youtube.com/channel/UCWuY1s3_n_1teidTmRDkXtQ"
+              href="https://www.youtube.com/@400persen"
               target="_blank"
             >
               <svg
